# causadb-python

./: .env.template  .gitignore  LICENSE  Makefile  README.md  account.md  account_info.md  account_remove.md  account_setup.md  causadb.md  data.md  data_add.md  data_list.md  data_remove.md  models.md  models_add.md  models_attach.md  models_detach.md  models_info.md  models_list.md  models_remove.md  models_status.md  models_train.md  pydoc-markdown.yml  pyproject.toml  tasks.py  test.py
.github/workflows/: ci.yml  deploy.yml  docs.yml  tests.yml
CausaDB/: Constructor.md  add_data.md  create_model.md  get_data.md  get_model.md  list_data.md  list_models.md  set_token.md
Data/: Constructor.md  from_csv.md  from_dict.md  from_pandas.md  remove.md
Model/: Constructor.md  attach.md  causal_attributions.md  causal_effects.md  detach.md  find_best_actions.md  get_edges.md  get_node_types.md  get_nodes.md  optimal_actions.md  remove.md  set_edges.md  set_node_types.md  set_nodes.md  simulate_action.md  simulate_actions.md  status.md  train.md
causadb/: __init__.py  _version.py  causadb.py  data.py  model.py  plotting.py  utils.py  workflow.py
causadb/cli/: account.py  data.py  main.py  models.py  utils.py
causadb/examples/: heating.py
notebooks/: find_best_actions.ipynb  quickstart.ipynb
notebooks/data/: lambda_data.csv
tests/: generate_data.py  model-config.json  test-action.json  test-data.csv  test_cli.py  test_client.py  test_data_checking.py
