[tool.poetry]
name = "causadb"
version = "0.1.2"
description = ""
authors = ["Jordan hart <jordan@causa.tech>"]
readme = "README.md"
packages = [
    { include = "causadb", from = "." }
]

[tool.poetry.scripts]
causadb = "causadb.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
toml = "^0.10.2"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
pandas = "^2.2.0"
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
