[tool.poetry]
name = "causadb"
version = "1.0.5"
description = ""
authors = ["Jordan hart <jordan@causa.tech>"]
readme = "README.md"
packages = [
    { include = "causadb", from = "." }
]

[tool.poetry.scripts]
causadb = "causadb.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
toml = "^0.10.2"
rich = "^13.7.0"
pandas = "^2.2.0"
marko = "^2.0.2"
setuptools = "^69.0.3"
python-dotenv = "^1.0.1"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pydoc-markdown = "^4.8.2"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
