[tool.poetry]
name = "causadb"
version = "1.8.4"
description = ""
authors = ["Jordan hart <jordan@causa.tech>"]
readme = "README.md"
packages = [
    { include = "causadb", from = "." }
]

[tool.poetry.scripts]
causadb = "causadb.cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.12.1"}
requests = "^2.31.0"
toml = "^0.10.2"
rich = "^13.7.0"
pandas = "^2.2.0"
marko = "^2.0.2"
setuptools = "^69.0.3"
python-dotenv = "^1.0.1"
pyarrow = "^15.0.0"
tqdm = "^4.66.2"
pydantic = "^2.6.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
networkx = "^3.2.1"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pydoc-markdown = "^4.8.2"
pytest = "^7.4.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
